--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -47,8 +47,8 @@ jobs:
         id: get-credentials
         uses: google-github-actions/get-gke-credentials@main
         with:
-          cluster_name: "$GKE_CLUSTER"
-          location: "$GKE_ZONE"
+          cluster_name: ${{ envs.GKE_CLUSTER }}
+          location: ${{ envs.GKE_ZONE }}
           credentials: ${{ secrets.GCP_CREDENTIALS }}
 
       - name: Set deployment image
