--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -2,8 +2,6 @@ name: CI/CD GKE
 on:
   push:
     branches: [main]
-    tags:
-      - "v*.*.*"
 
 env:
   GKE_CLUSTER: ecommerce-cluster-1
@@ -34,14 +32,20 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       
+      - name: Bump version and push tag
+        id: tagging
+        uses: mathieudutour/github-tag-action@v4.5
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          push: true
           context: .
           file: ./Dockerfile.prod
-          tags: ${{ steps.docker_meta.outputs.tags }}
-          labels: ${{ steps.docker_meta.outputs.labels }}
+          tags: haungi/ecommerce-admin-frontend:${{ steps.tagging.outputs.new_version }}
       
       - name: Gke Credentials
         id: get-credentials
@@ -52,4 +56,4 @@ jobs:
           credentials: ${{ secrets.GCP_CREDENTIALS }}
 
       - name: Set deployment image
-        run: kubectl set image deployment ecommerce-admin-frontend ecommerce-admin-frontend=haungi/ecommerce-admin-frontend:${{ steps.docker_meta.outputs.tags }}
+        run: kubectl set image deployment ecommerce-admin-frontend ecommerce-admin-frontend=haungi/ecommerce-admin-frontend:${{ steps.tagging.outputs.new_version }}
